5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1826_1647.log
== TEST (2019-06-12 18:57:21) 
-- CODE:
vet= array(eval(input("vetn:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:00) 
-- CODE:
vet= array(eval(input("digite freq:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet= array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:22) 
-- CODE:
from numpy import*
vet= array(eval(input("digite freq:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:58:37) 
-- CODE:
from numpy import*
vet= array(eval(input("digite freq:")))
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:59:09) 
-- CODE:
from numpy import*
vet= array(eval(input("digite freq:")))
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:45) 
-- CODE:
from numpy import*
vet= array(eval(input("digite freq:")))
while(vet > 70//100)
-- ERROR:
File "XXXX", line 3
    while(vet > 70//100)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:01:01) 
-- CODE:
from numpy import*
vet= array(eval(input("digite freq:")))
while(vet > 70//100):
-- ERROR:
File "XXXX", line 4
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
